6930116: loop predication code does not handle If nodes with only one projection

Add check for iff->outcnt() < 2.

Reviewed-by: never